# faithful-archive-dioxus

./: CLAUDE.md  Cargo.toml  Dioxus.toml  NEXT_UP.md  PRD.md  README.md  ROADMAP.md  WALLET_INTEGRATION.md  beacon-entry.js  input.css  package-lock.json  package.json
.claude/commands/: orchestrate.md
assets/: main.css  tailwind.css
public/: beacon-wallet-bridge.js  beacon-wallet-loader.js  index.html  main.css  manifest.json  wallet-bridge.js
src/: app.rs  main.rs
src/components/: mod.rs  wallet_connect.rs  wallet_example.rs  wallet_modal.rs
src/services/: arweave.rs  mod.rs  wallet.rs
src/services/wallet/: beacon.rs  context.rs  hooks.rs  mod.rs  strategy.rs  wallet_kit.rs  wander.rs  web_wallet.rs
