[package]
name = "faithful_archive"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Shade <dylan@example.com>"]
description = "A Dioxus-based web application for sharing Christ-honoring spiritual content on Arweave"
repository = "https://github.com/dpshade/faithful-archive-dioxus"
license = "MIT"
keywords = ["dioxus", "arweave", "spiritual", "content", "blockchain"]
categories = ["web-programming", "wasm"]

[dependencies]
# Dioxus Framework
dioxus = { version = "0.6", features = ["web", "router"] }

# Arweave Integration
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM and Web APIs
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

# Async Runtime
tokio = { version = "1.0", features = ["macros", "time"] }
futures = "0.3"

# Storage
rexie = "0.6"

# Crypto
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Date and Time
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Logging
log = "0.4"
console_log = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
